# airbnb-location-verifier

./: PROJECT_STRUCTURE.md  README.md  app.py  gunicorn_config.py  main.py  pyproject.toml  replit.md  run_production.sh  start_background_worker.sh  wsgi.py
src/: __init__.py  config.py
src/ai/: __init__.py  ai_helpers.py
src/background/: __init__.py  background_worker.py
src/core/: __init__.py  app.py  metrics.py  models.py
src/extraction/: __init__.py  apify_scraper.py  scraper.py
src/nlp/: __init__.py  address_normalizer.py  nlp_extractor.py
src/ocr/: __init__.py  google_vision_ocr.py  tesseract_ocr.py  vision_analyzer.py
src/scoring/: __init__.py  multi_signal_scorer.py  real_estate_searcher.py  streetview_matcher.py
src/utils/: location_cache.py  resilience.py
static/css/: custom.css
static/js/: main.js
templates/: bulk_upload.html  index.html  job_details.html  jobs.html  layout.html  listing_unavailable.html  monitoring_dashboard.html  processing.html  queue_dashboard.html  queue_offer.html  quick_result.html  quick_verify.html  result.html
