[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "circuitbreaker>=2.1.3",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "geopy>=2.4.1",
    "google-cloud-vision>=3.10.2",
    "google-streetview>=1.2.9",
    "googlemaps>=4.10.0",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.3.0",
    "prometheus-client>=0.23.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "scraper>=0.1.0",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
